--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -19,8 +19,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20%;
-    height: 45%;
+    width: 300px;
+    height: 350px;
     background-color: rgba(225, 225, 225, 0.5) ;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     display: flex;
