--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -10,12 +10,12 @@
     <h1>Admin Panel</h1>
     <p>Tutaj znajduje się panel administracyjny.</p>
     <a href="/logout">Wyloguj</a>
-    <script>
+    <!-- <script>
       document
         .getElementById("logout-button")
         .addEventListener("click", function () {
           window.location.href = "/logout"; 
         });
-    </script>
+    </script> -->
   </body>
 </html>
