index.html początek

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/menu.css">
+    <title>Document</title>
 </head>
 <body>
-  
+    <img class="background"></img> 
+
+    <nav>
+        <ul>
+            <li><a href="/"><b>MENU</b></a></li>
+            <li><a href="/"><b>TASKS</b></a></li>
+            
+
+        </ul>
+        <a href="/login" class="menu_login"><b>LOGIN</b></a>
+    </nav>
+
 </body>
 </html>
