index.html początek poprawka

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
 
     <nav>
         <ul>
-            <li><a href="/"><b>MENU</b></a></li>
+            <li><a href="/"><b>HOME</b></a></li>
             <li><a href="/"><b>TASKS</b></a></li>
-            
+
 
         </ul>
         <a href="/login" class="menu_login"><b>LOGIN</b></a>
