--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,17 @@
 <body>
     <img class="background"></img> 
 
-    <nav>
-        <ul>
-            <li><a href="/"><b>HOME</b></a></li>
-            <li><a href="/"><b>TASKS</b></a></li>
+    <div class="black_bg">
+        <div class="get_start">
+            <div>
+                <h1>Py Genius</h1>
+                <div class="small">Interactive Learning to Program</div>
+            </div>
+    
+        </div>
+    </div>
 
-
-        </ul>
-        <a href="/login" class="menu_login"><b>LOGIN</b></a>
-    </nav>
+    
 
 </body>
 </html>
