--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -4,12 +4,12 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Zmiana dla .menu_login */
+
 .menu_login {
-    margin-left: auto; /* Ustawienie marginesu na lewo na auto powoduje przesunięcie elementu na końcu menu i przyleganie do prawej strony */
+    margin-left: auto; 
 }
 
-/* Zmiana dla .nav */
+/* Zmiana dla .nav
 nav {
     background: linear-gradient(90deg, rgba(2,0,36,0.6) 0%, rgba(90,90,163,0.6) 47%, rgba(0,212,255,0.6) 100%);
     position: absolute;
@@ -28,14 +28,23 @@ nav {
 }
 
 
-nav ul  {
+nav ul {
     display: flex;
     flex-direction: row;
-    gap: 40%;
+    margin-right: auto;
+    padding: 0px;
+    margin: 0px; 
 }
 
-nav ul li {
-    list-style-type: none
+
+nav ul li:nth-child(2) {
+    list-style-type: none;
+    margin: 0px 20px 0px 20px;
+}
+
+nav ul li:first-child {
+    list-style-type: none;
+    margin: 0px 20px 0px 0px;
 }
 
 nav ul li a {
@@ -52,7 +61,7 @@ nav {
 nav a {
     color: #fff;
     text-decoration: none; 
-}
+} */
 
 
 /* nav ul li::before {
