--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
             <div>
                 <h1>Py Genius</h1>
                 <div class="small">Interactive Learning to Program</div>
+                <button></button>
             </div>
     
         </div>
