--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,68 @@
             <div>
                 <h1>Py Genius</h1>
                 <div class="small">Interactive Learning to Program</div>
-                <button></button>
+                <button><h5 style="color: white;">Get Started</h5></button>
+                <div>
+                    <h4><a href="/login" class="no-underline">LOGIN</a> | <a href="/" class="no-underline">SIGN UP</a></h4>
+                </div>
             </div>
     
         </div>
     </div>
 
-    
+
+
+
+    <div class="container">
+        
+            <div class="container_text" >
+                <div class="center">
+                    <h2>Let's protect the web together</h2>
+                    <p>Defend the Web is an interactive security platform where you can learn and challenge your skills. Try and complete all of our 60+ hacking levels. Learn from our series of articles covering all aspects of security. Articles will guide you through the essentials to get started. As you progress more complex topics will be introduced to build up your knowledge.</p>
+                </div>
+            </div>
+        
+
+
+            <div class="container_text" >
+                <div class="center">
+                    <h2>Learn</h2>
+                    <p>Work your way through our <strong>+ articles</strong>. Explore a wide range of security topics with easy to read articles and interactive challenges. Each topic will be analyzed and explored in detail in manageable and easy to understand chunks.</p>
+                </div>
+            </div>
+
+        <div class="container_text" >
+            <div class="center">
+                <h2>Challenge</h2>
+                <p>Take our challenges to test your knowledge against real world scenarios. Challenges can be taken at anytime and will put everything you have learnt to the test. Our <strong>60+ challenges</strong> have been completed over <strong>2.9 million times</strong> so you are in good hands if you get stuck.</p>
+            </div>
+        </div>
+        <div class="container_text" >
+            <div class="center">
+                <h2>Collaborate</h2>
+                <p>Join the vibrant community of hackers, developers and security experts and share your knowledge and learn from others. Give and receive hints and tips with the community through our discussion boards. Find new areas of interest both on and off topic.</p>
+            </div>
+
+        </div>
+        <div class="container_text" >
+            <div class="center">
+                <h2>Progress</h2>
+                <p>Keep track of all your activity, racking up points in the challenges and earning medals. Connect with over <strong>800 thousand members</strong> and see how you rank up.</p>
+            </div>
+        </div>
+    </div>
+
+
+    <script>
+
+window.addEventListener('resize', function() {
+    var width = window.innerWidth;
+    var height = window.innerHeight;
+    console.log('Aktualna szerokość okna:', width, 'px');
+    console.log('Aktualna wysokość okna:', height, 'px');
+});
+
+    </script>
 
 </body>
 </html>
