--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -39,6 +39,7 @@ body{
     height: 40%;
     padding: 0%;
     margin: 0%;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     padding-left: 20%;
