--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@ body{
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 45vh;
+    height: 46vh;
     overflow: auto; 
     position: relative; 
     min-width: 300px;
@@ -22,7 +22,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    height: 45vh;
+    height: 46vh;
     background-color: rgba(0, 0, 0, 0.4);
     display: flex;
     flex-direction: column;
@@ -91,8 +91,8 @@ body{
 .get_start div button{
     font-size: 2rem;
     margin-top: 35px;
-    margin-bottom: 15px;
-    width: 150px;
+    margin-bottom: 0px;
+    width: 180px;
     height: 8vh;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(90,90,163,1) 47%, rgba(0,212,255,1) 100%);
@@ -103,6 +103,9 @@ body{
     background-size: 120% auto; 
     background-position: 100% 50%; 
     transition: background-position 0.3s; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -110,3 +113,94 @@ body{
 .get_start div button:hover {
     background-position: 0 50%; 
 }
+
+
+.get_start div button:active {
+    transform: scale(1.1);
+}
+
+
+.get_start div div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 0px;
+
+}
+
+.get_start div div a{
+    color: white;
+}
+.no-underline {
+    text-decoration: none;
+}
+
+
+
+.container{
+    position: relative;
+    width: 100%;
+    max-width: 1220px;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    
+} 
+
+@media (min-width: 700px) {
+    .container {
+        width: 100%;
+        padding: 0;
+    }
+
+}
+
+
+
+.container div{
+    align-self: center;
+}
+
+.padding{
+    padding: 50px 0;
+}
+
+
+
+.container_text {
+    width: 50%;
+    height: 100%;
+    align-self: center;
+}
+
+
+
+.center{
+    text-align: center;
+    overflow: hidden; 
+
+}
+.group_elements{
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+/* Zakres 686px - 885px */
+@media only sreeen and (min-height: 686px) and (max-height: 885px) {
+    .group_elements {
+        height: 30vh;
+    }
+    .center{
+        width: 100%;
+    }
+}
+
+
