--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
         
             <div class="container_text" >
                 <div class="center">
-                    <h2>Let's protect the web together</h2>
-                    <p>Defend the Web is an interactive security platform where you can learn and challenge your skills. Try and complete all of our 60+ hacking levels. Learn from our series of articles covering all aspects of security. Articles will guide you through the essentials to get started. As you progress more complex topics will be introduced to build up your knowledge.</p>
+                    <h2>Somthing text</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quo magni laudantium fugit nemo hic accusamus corporis tenetur illo! Fugit, dolor? Harum fugit quos, natus repellendus hic soluta nam magnam?<p>
                 </div>
             </div>
         
@@ -41,27 +41,27 @@
             <div class="container_text" >
                 <div class="center">
                     <h2>Learn</h2>
-                    <p>Work your way through our <strong>+ articles</strong>. Explore a wide range of security topics with easy to read articles and interactive challenges. Each topic will be analyzed and explored in detail in manageable and easy to understand chunks.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloribus natus rerum accusamus itaque error velit. Nesciunt, ipsa nostrum, autem totam perferendis possimus tempora ipsum enim deleniti sed molestiae omnis!</p>
                 </div>
             </div>
 
         <div class="container_text" >
             <div class="center">
                 <h2>Challenge</h2>
-                <p>Take our challenges to test your knowledge against real world scenarios. Challenges can be taken at anytime and will put everything you have learnt to the test. Our <strong>60+ challenges</strong> have been completed over <strong>2.9 million times</strong> so you are in good hands if you get stuck.</p>
-            </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati nam quod vitae aspernatur beatae iste minima voluptatum repellendus magni sit laboriosam quibusdam nesciunt totam quas, commodi provident a vero laborum?</p>
+           </div>
         </div>
         <div class="container_text" >
             <div class="center">
                 <h2>Collaborate</h2>
-                <p>Join the vibrant community of hackers, developers and security experts and share your knowledge and learn from others. Give and receive hints and tips with the community through our discussion boards. Find new areas of interest both on and off topic.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laboriosam sunt non quaerat nisi quae mollitia asperiores qui, distinctio cum harum? Magnam temporibus quas eos architecto labore soluta voluptate cupiditate.</p>
             </div>
 
         </div>
         <div class="container_text" >
             <div class="center">
                 <h2>Progress</h2>
-                <p>Keep track of all your activity, racking up points in the challenges and earning medals. Connect with over <strong>800 thousand members</strong> and see how you rank up.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolorem eius aspernatur distinctio vel nesciunt, et doloremque omnis veniam quisquam delectus aut exercitationem, quidem alias dolorum consequuntur, commodi rem eum?</p>
             </div>
         </div>
     </div>
