--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         
             <div class="container_text" >
                 <div class="center">
-                    <h2>Somthing text</h2>
+                    <h2>Sposób nauki</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quo magni laudantium fugit nemo hic accusamus corporis tenetur illo! Fugit, dolor? Harum fugit quos, natus repellendus hic soluta nam magnam?<p>
                 </div>
             </div>
