--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,8 @@ body{
     height: 100%;
     margin: 0px; 
     padding: 0px;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(110, 0, 213, 0.65) 0%, rgba(77, 77, 204, 0.65) 47%, rgba(0,212,255,0.65) 100%);
 
 }
 .background {
@@ -146,19 +148,19 @@ body{
     width: 100%;
     max-width: 1220px;
     margin: 0 auto;
-
     display: flex;
     flex-direction: column;
+    font-size: 24px;
     
 } 
 
-@media (min-width: 700px) {
+/* @media (min-width: 700px) {
     .container {
         width: 100%;
         padding: 0;
     }
 
-}
+} */
 
 
 
@@ -166,25 +168,26 @@ body{
     align-self: center;
 }
 
-.padding{
-    padding: 50px 0;
-}
 
 
 
 .container_text {
-    width: 50%;
+    width: 95%;
     height: 100%;
     align-self: center;
+
 }
 
 
 
 .center{
     text-align: center;
-    overflow: hidden; 
 
 }
+.over{
+    overflow: hidden; 
+}
+
 .group_elements{
     width: 100%;
     height: 25vh;
@@ -195,14 +198,22 @@ body{
 
 
 
-/* Zakres 686px - 885px */
-@media only sreeen and (min-height: 686px) and (max-height: 885px) {
-    .group_elements {
-        height: 30vh;
-    }
-    .center{
-        width: 100%;
-    }
+.full_box{
+    width: 80%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 15%;
+
 }
+
+
+.computer{
+    margin-top: 50px;
+    width: 45vw;
+    height: 50vh;
+}
+
 
 
