--- a/templates/index.html
+++ b/templates/index.html
@@ -28,29 +28,38 @@
 
 
     <div class="container">
-        
-            <div class="container_text" >
-                <div class="center">
-                    <h2>Sposób nauki</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quo magni laudantium fugit nemo hic accusamus corporis tenetur illo! Fugit, dolor? Harum fugit quos, natus repellendus hic soluta nam magnam?<p>
-                </div>
-            </div>
-        
-
-
-            <div class="container_text" >
-                <div class="center">
-                    <h2>Learn</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloribus natus rerum accusamus itaque error velit. Nesciunt, ipsa nostrum, autem totam perferendis possimus tempora ipsum enim deleniti sed molestiae omnis!</p>
-                </div>
-            </div>
-
         <div class="container_text" >
+                <!-- <img src="../static/pictures/python_learn.png"> -->
             <div class="center">
-                <h2>Challenge</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati nam quod vitae aspernatur beatae iste minima voluptatum repellendus magni sit laboriosam quibusdam nesciunt totam quas, commodi provident a vero laborum?</p>
-           </div>
+                <h2>Sposób nauki</h2>
+                <p>W naszym systemie nauki mamy wiele różnych <strong>rodzajów zadań</strong>,<br> dopasowanych do różnych poziomów trudności. Są one kluczowym <br>elementem naszej metody nauczania, pozwalającym uczniom rozwijać <br>   swoje umiejętności w zróżnicowany sposób.</p> 
+            </div>
         </div>
+        
+        <div class="full_box"> 
+            <div class="container_text" >
+
+                <div class="over">
+
+                    <h2>Zadania</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.   Blanditiis doloribus natus rerum accusamus itaque  error velit.Nesciunt, ipsa nostrum, autem totam perferendis  <br>possimus tempora ipsum enim deleniti sed molestiae omnis!</p>
+                </div>
+
+            </div>
+            <img src="../static/pictures/python_learn.png" class="computer">
+        </div
+        
+
+            <div class="full_box">
+                <div class="containe    r_text" >
+                    <div class="center">
+ 
+                        <h2>Challenge</h2>
+
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.  <br>Obcaecati nam quod vitae aspernatur beatae iste minima  <br>voluptatum repellendus magni sit laboriosam quibusdam <br>nesciunt  totam  xquas, commodi provident a vero laborum?</p>
+                   </div>
+                </div>
+            </div>
         <div class="container_text" >
             <div class="center">
                 <h2>Collaborate</h2>
