--- a/templates/index.html
+++ b/templates/index.html
@@ -24,56 +24,21 @@
         </div>
     </div>
 
+    <div class="main_contener">
+        <div class="first_cont">
+            <div class="text_cont">
+                <div class="text">
+                    <h1>Sposób nauczania</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Optio, cumque impedit? Nisi odio, iste, quaerat<br> saepe nulla soluta, neque minus animi esse possimus <br>assumenda qui! Eum perspiciatis quis eligendi<br> voluptate. Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Libero iste neque, obcaecati corrupti <br>fugiat nesciunt, totam pariatur id quam</p>
 
-
-
-    <div class="container">
-        <div class="container_text" >
-                <!-- <img src="../static/pictures/python_learn.png"> -->
-            <div class="center">
-                <h2>Sposób nauki</h2>
-                <p>W naszym systemie nauki mamy wiele różnych <strong>rodzajów zadań</strong>,<br> dopasowanych do różnych poziomów trudności. Są one kluczowym <br>elementem naszej metody nauczania, pozwalającym uczniom rozwijać <br>   swoje umiejętności w zróżnicowany sposób.</p> 
-            </div>
-        </div>
-        
-        <div class="full_box"> 
-            <div class="container_text" >
-
-                <div class="over">
-
-                    <h2>Zadania</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.   Blanditiis doloribus natus rerum accusamus itaque  error velit.Nesciunt, ipsa nostrum, autem totam perferendis  <br>possimus tempora ipsum enim deleniti sed molestiae omnis!</p>
                 </div>
-
-            </div>
-            <img src="../static/pictures/python_learn.png" class="computer">
-        </div
-        
-
-            <div class="full_box">
-                <div class="containe    r_text" >
-                    <div class="center">
- 
-                        <h2>Challenge</h2>
-
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.  <br>Obcaecati nam quod vitae aspernatur beatae iste minima  <br>voluptatum repellendus magni sit laboriosam quibusdam <br>nesciunt  totam  xquas, commodi provident a vero laborum?</p>
-                   </div>
-                </div>
-            </div>
-        <div class="container_text" >
-            <div class="center">
-                <h2>Collaborate</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laboriosam sunt non quaerat nisi quae mollitia asperiores qui, distinctio cum harum? Magnam temporibus quas eos architecto labore soluta voluptate cupiditate.</p>
-            </div>
-
-        </div>
-        <div class="container_text" >
-            <div class="center">
-                <h2>Progress</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolorem eius aspernatur distinctio vel nesciunt, et doloremque omnis veniam quisquam delectus aut exercitationem, quidem alias dolorum consequuntur, commodi rem eum?</p>
+                <img src="../static/pictures/python_learn.png">
             </div>
         </div>
+
     </div>
+
+
 
 
     <script>
