--- a/static/css/main.css
+++ b/static/css/main.css
@@ -141,79 +141,70 @@ body{
     text-decoration: none;
 }
 
-
-
-.container{
-    position: relative;
+.main_contener{
     width: 100%;
-    max-width: 1220px;
-    margin: 0 auto;
+    height: 100%;
+    margin: 0px; 
+    padding: 0px;
     display: flex;
     flex-direction: column;
-    font-size: 24px;
-    
-} 
-
-/* @media (min-width: 700px) {
-    .container {
-        width: 100%;
-        padding: 0;
-    }
-
-} */
-
-
-
-.container div{
-    align-self: center;
-}
-
-
-
-
-.container_text {
-    width: 95%;
-    height: 100%;
-    align-self: center;
-
-}
-
-
-
-.center{
-    text-align: center;
-
-}
-.over{
-    overflow: hidden; 
-}
-
-.group_elements{
-    width: 100%;
-    height: 25vh;
-    display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    gap: 1% 0% 1% 0%;
+}
+
+.first_cont{
+    width: 100%;
+    height: 40%;
+    /* margin: 0% 10% 0% 10%   ; */
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
-
-.full_box{
+.text_cont{
     width: 80%;
     height: 100%;
+    /* background-color: blue; */
     display: flex;
-    align-items: center;
     flex-direction: row;
-    gap: 15%;
+    gap: 5%;
 
 }
 
 
-.computer{
-    margin-top: 50px;
-    width: 45vw;
-    height: 50vh;
+
+.text_cont img{
+    width: 400px;
+    height: 400px;
 }
+.text{
+    width: 40%;
+    font-size: 130%;
+    margin-left: 10%;
+    white-space: nowrap;
+}   
 
 
-
+@media (max-width: 1200px) {
+    .text_cont {
+        width: 80%;
+        height: 100%;
+        /* background-color: blue; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 5%;
+    }
+    .text{
+        /* color: wheat; */
+        width: 40%;
+        font-size: 100%;
+        margin-left: 0%;
+        align-self: self-start;
+    }   
+}
