--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Optio, cumque impedit? Nisi odio, iste, quaerat<br> saepe nulla soluta, neque minus animi esse possimus <br>assumenda qui! Eum perspiciatis quis eligendi<br> voluptate. Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Libero iste neque, obcaecati corrupti <br>fugiat nesciunt, totam pariatur id quam</p>
 
                 </div>
-                <img src="../static/pictures/python_learn.png">
+                <div class="python_img"></div>
             </div>
         </div>
 
