--- a/static/css/main.css
+++ b/static/css/main.css
@@ -144,7 +144,8 @@ body{
 .main_contener{
     width: 100%;
     height: 100%;
-    margin: 0px; 
+    margin: 0px;
+    margin-top: 5%; 
     padding: 0px;
     display: flex;
     flex-direction: column;
@@ -177,10 +178,7 @@ body{
 
 
 
-.text_cont img{
-    width: 400px;
-    height: 400px;
-}
+
 .text{
     width: 40%;
     font-size: 130%;
@@ -207,4 +205,13 @@ body{
         margin-left: 0%;
         align-self: self-start;
     }   
+}
+
+.python_img {
+    width: 400px;
+    height: 360px;
+    background-image: url('/static/pictures/python_learn.png');
+    background-size: 100%;
+    background-position: center;
+    border: none;
 }
