--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,17 @@
                 <div class="python_img"></div>
             </div>
         </div>
+        <div class="first_cont">
+            <div class="text_cont" id="tC_2">
+                <div class="python_img2"></div>
+                <div class="text">
+                    <h1>Zadaia</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Optio, cumque impedit? Nisi odio, iste, quaerat<br> saepe nulla soluta, neque minus animi esse possimus <br>assumenda qui! Eum perspiciatis quis eligendi<br> voluptate. Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Libero iste neque, obcaecati corrupti <br>fugiat nesciunt, totam pariatur id quam</p>
+
+                </div>
+
+            </div>
+        </div>
 
     </div>
 
