--- a/static/css/main.css
+++ b/static/css/main.css
@@ -162,6 +162,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2%;
 
 }
 
@@ -207,10 +208,40 @@ body{
     }   
 }
 
+
+@media (max-width: 1200px) {
+    #tC_2 {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+
+    }
+    .text{
+        /* color: wheat; */
+        width: 40%;
+        font-size: 100%;
+        margin-left: 0%;
+        align-self: self-start;
+    }   
+    
+}
+
+
 .python_img {
     width: 400px;
     height: 360px;
     background-image: url('/static/pictures/python_learn.png');
+    background-size: 100%;
+    background-position: center;
+    border: none;
+}
+
+
+.python_img2 {
+    width: 550px;
+    height: 360px;
+    background-image: url('/static/pictures/pc.png');
     background-size: 100%;
     background-position: center;
     border: none;
