--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,17 @@
 
             </div>
         </div>
+        <div class="first_cont">
+            <div class="text_cont">
+                <div class="text">
+                    <h1>Sposób nauczania</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Optio, cumque impedit? Nisi odio, iste, quaerat<br> saepe nulla soluta, neque minus animi esse possimus <br>assumenda qui! Eum perspiciatis quis eligendi<br> voluptate. Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Libero iste neque, obcaecati corrupti <br>fugiat nesciunt, totam pariatur id quam</p>
+
+                </div>
+                <div class="python_img"></div>
+            </div>
+        </div>
+        
 
     </div>
 
