--- a/static/css/main.css
+++ b/static/css/main.css
@@ -225,18 +225,21 @@ body{
         justify-content: center;
 
     }
+
+}
+
+@media  (max-width: 450px) {
+    .python_img2 {
+        width: 355px;
+        height: 300px;
+        background-image: url('/static/pictures/pc.png');
+        background-size: cover;
+        background-position: center;
+        border: none;
+    }
     
-.python_img2 {
-    width: 420px;
-    height: 300px;
-    background-image: url('/static/pictures/pc.png');
-    background-size: cover;
-    background-position: center;
-    border: none;
+    
 }
-
-}
-
 
 
 
