--- a/templates/index.html
+++ b/templates/index.html
@@ -32,14 +32,20 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, cumque impedit? Nisi odio, iste, quaerat saepe nulla soluta, neque minus animi esse possimus >assumenda qui! Eum perspiciatis quis eligendi voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste neque, obcaecati corrupti fugiat nesciunt, totam pariatur id quam</p>
 
                 </div>
-                <div class="python_img"></div>
+                <div class="python_img2">
+                    <img src="/static/pictures/python_learn.png" alt="Computer Image" id="py_2">
+                </div>
+            
             </div>
         </div>
         <div class="first_cont">
             <div class="text_cont" id="tC_2">
-                <div class="python_img2"></div>
+                    <div class="python_img2">
+                        <img src="/static/pictures/pc.png" alt="Computer Image" id="py_2">
+                    </div>
+                    
                 <div class="text">
-                    <h1>Zadaia</h1>
+                    <h1>Zadania</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, cumque impedit? Nisi odio, iste, quaerat saepe nulla soluta, neque minus animi esse possimus assumenda qui! Eum perspiciatis quis eligendi  voluptate. Lorem ipsum dolor sit amet consectetur  adipisicing elit. Libero iste neque, obcaecati corrupti fugiat nesciunt, totam pariatur id quam</p>
 
                 </div>
@@ -53,7 +59,10 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Optio, cumque impedit? Nisi odio, iste, quaerat<br> saepe nulla soluta, neque minus animi esse possimus <br>assumenda qui! Eum perspiciatis quis eligendi<br> voluptate. Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Libero iste neque, obcaecati corrupti <br>fugiat nesciunt, totam pariatur id quam</p>
 
                 </div>
-                <div class="python_img"></div>
+                <div class="python_img2">
+                    <img src="/static/pictures/python_learn.png" alt="Computer Image" id="py_2">
+                </div>
+            
             </div>
         </div>
         
