work final final

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
             <div class="text_cont">
                 <div class="text">
                     <h1>Sposób nauczania</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Optio, cumque impedit? Nisi odio, iste, quaerat<br> saepe nulla soluta, neque minus animi esse possimus <br>assumenda qui! Eum perspiciatis quis eligendi<br> voluptate. Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Libero iste neque, obcaecati corrupti <br>fugiat nesciunt, totam pariatur id quam</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, cumque impedit? Nisi odio, iste, quaerat saepe nulla soluta, neque minus animi esse possimus assumenda qui! Eum perspiciatis quis eligendi voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste neque, obcaecati corrupti fugiat nesciunt, totam pariatur id quam</p>
 
                 </div>
                 <div class="python_img2">
