zaraz sie zabije

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <div class="small">Interactive Learning to Program</div>
                 <button><h5 style="color: white;">Get Started</h5></button>
                 <div>
-                    <h4><a href="/login" class="no-underline">LOGIN</a> | <a href="/" class="no-underline">SIGN UP</a></h4>
+                    <h4><a href="/login" class="no-underline">LOGIN</a> | <a href="/register" class="no-underline">SIGN UP</a></h4>
                 </div>
             </div>
     
@@ -73,7 +73,7 @@
 
 
     <script>
-
+alert("Strona jest stworzona jako projekt na lekcje Programowanai Stron Internetowych prosze mnie nie pozwyać thx")
 window.addEventListener('resize', function() {
     var width = window.innerWidth;
     var height = window.innerHeight;
