--- a/templates/login.html
+++ b/templates/login.html
@@ -1,80 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../static/css/login.css">
-</head>
-<body>
-    <div class="login_container">
+    <link rel="stylesheet" href="../static/css/login.css" >
+  </head>
+  <body>
 
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="720px" height="718px" viewBox="0 0 720 718">
-            <defs>
-              <clipPath id="clip-path">
-                <rect width="720" height="718" fill="none"/>
-              </clipPath>
-              <linearGradient id="linear-gradient" x1="-0.264" y1="-0.04" x2="1" y2="0.816" gradientUnits="objectBoundingBox">
-                <stop offset="0" stop-color="#15007e"/>
-                <stop offset="1" stop-color="#8600ff"/>
-              </linearGradient>
-              <linearGradient id="linear-gradient-2" x1="1" y1="0.026" x2="0.089" y2="0.515" gradientUnits="objectBoundingBox">
-                <stop offset="0" stop-color="#00c4f5"/>
-                <stop offset="1" stop-color="#ff00e6"/>
-              </linearGradient>
-              <linearGradient id="linear-gradient-3" x1="0.5" y1="-0.228" x2="0.413" y2="1.22" gradientUnits="objectBoundingBox">
-                <stop offset="0" stop-color="#ff00e5"/>
-                <stop offset="1" stop-color="#1a0080"/>
-              </linearGradient>
-              <linearGradient id="linear-gradient-4" x1="1.153" y1="-0.079" x2="-0.119" y2="1.451" gradientUnits="objectBoundingBox">
-                <stop offset="0" stop-color="#fff"/>
-                <stop offset="0.251" stop-color="#c331ee"/>
-                <stop offset="1" stop-color="#0c81cf"/>
-              </linearGradient>
-              <linearGradient id="linear-gradient-5" x1="0.5" y1="-0.228" x2="0.413" y2="1.22" gradientUnits="objectBoundingBox">
-                <stop offset="0" stop-color="#1eb5ff"/>
-                <stop offset="1" stop-color="#ce0fbb"/>
-              </linearGradient>
-            </defs>
-            <g id="Group_6" data-name="Group 6" transform="translate(0 -6.81)">
-              <g id="Group_5" data-name="Group 5" transform="translate(0 7)">
-                <g id="Repeat_Grid_1" data-name="Repeat Grid 1" transform="translate(0 -0.19)" clip-path="url(#clip-path)">
-                  <g transform="translate(0 0.19)">
-                    <rect id="Rectangle_1" data-name="Rectangle 1" width="720" height="718" rx="55" transform="translate(0 -0.19)" fill="url(#linear-gradient)"/>
-                  </g>
-                </g>
-                <path id="Path_2" data-name="Path 2" d="M432.788,0s-116.73,168.608,183.8,190.633S895.117,310.607,895.117,310.607V0Z" transform="translate(-175.476)" fill="url(#linear-gradient-2)"/>
-                <g id="Group_3" data-name="Group 3" transform="translate(12 12)">
-                  <circle id="Ellipse_1" data-name="Ellipse 1" cx="90.5" cy="90.5" r="90.5" transform="translate(0 -0.19)" fill="url(#linear-gradient-3)"/>
-                  <text id="PyGenius" transform="translate(29 101.81)" fill="#fff" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">PyGenius</tspan></text>
-                </g>
-                <text id="WELCOM_TO_LOGIN_PAGE" data-name="WELCOM TO LOGIN PAGE" transform="translate(178 310.81)" fill="#fff" font-size="43" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">WELCOM TO LOGIN PAGE</tspan></text>
-                <path id="Path_4" data-name="Path 4" d="M0,253.374s113.519-71.439,178.107,91.011,271.075,92.968,271.075,92.968,139.207-48.686,172.48,162.694,93.947,68.5,93.947,68.5h3.628V716.6l-620.218-.836s18.664-57.246-45.12-85.712S.922,557.575.922,557.575Z" fill="url(#linear-gradient-4)"/>
-                <path id="Path_5" data-name="Path 5" d="M93.5,0A93.5,93.5,0,1,1,0,93.5,93.5,93.5,0,0,1,93.5,0Z" transform="translate(48 445.81)" fill="url(#linear-gradient-5)"/>
-                <g id="Group_2" data-name="Group 2" transform="translate(75 486.25)">
-                  <circle id="Ellipse_5" data-name="Ellipse 5" cx="35" cy="35" r="35" transform="translate(31 -0.44)" fill="#0043ff"/>
-                  <rect id="Rectangle_3" data-name="Rectangle 3" width="133" height="58" rx="29" transform="translate(0 64.56)" fill="#0043ff"/>
-                </g>
-              </g>
-            </g>
-          </svg>
-          
-
-
-          <div class="login_elements">
-            <h1>cos</h1>
-          </div>
+    <div style="width: 100px; height: 200px;background-color: red;">
 
     </div>
-    <script>
 
-        window.addEventListener('resize', function() {
-            var width = window.innerWidth;
-            var height = window.innerHeight;
-            console.log('Aktualna szerokość okna:', width, 'px');
-            console.log('Aktualna wysokość okna:', height, 'px');
-        });
-        
-            </script>
-</body>
+
+
+
+    <script>
+      window.addEventListener("resize", function () {
+        var width = window.innerWidth;
+        var height = window.innerHeight;
+        console.log("Aktualna szerokość okna:", width, "px");
+        console.log("Aktualna wysokość okna:", height, "px");
+      });
+    </script>
+  </body>
 </html>
