--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <div class="small">Interactive Learning to Program</div>
                 <button><h5 style="color: white;">Get Started</h5></button>
                 <div>
-                    <h4><a href="/login" class="no-underline">LOGIN</a> | <a href="/register" class="no-underline">SIGN UP</a></h4>
+                    <h4><a href="/login" class="no-underline">LOGIN</a> | <a href="/login" class="no-underline">SIGN UP</a></h4>
                 </div>
             </div>
     
@@ -65,15 +65,17 @@
             
             </div>
         </div>
-        
 
-    </div>
+        <div class="">
+
+        </div>
+</div>
 
 
 
 
     <script>
-alert("Strona jest stworzona jako projekt na lekcje Programowanai Stron Internetowych prosze mnie nie pozwyać thx")
+// alert("Strona jest stworzona jako projekt na lekcje Programowanai Stron Internetowych prosze mnie nie pozwyać thx")
 window.addEventListener('resize', function() {
     var width = window.innerWidth;
     var height = window.innerHeight;
