--- a/templates/login.html
+++ b/templates/login.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../static/css/login.css" >
+    <link rel="stylesheet" href="../static/css/register.css" />
   </head>
   <body>
-
-    <div style="width: 100px; height: 200px;background-color: red;">
-
+    <div class="element">
+      <div class="login_elements">
+        <div class="pics-container">
+          <img src="../static/pictures/profilepic.png" />
+          <h4>LOGIN</h4>
+          <div class="login">
+            <label>Email</label>
+            <input type="text" placeholder="Email" class="passy"/>
+            <label>Password</label>
+            <input type="password" placeholder="Password" class="passy"/>
+            <button>Submit</button> 
+          </div>
+        </div>
+      </div>
+      <div class="login_png">
+        <img src="../static/pictures/register.png" />
+      </div>
     </div>
-
-
-
 
     <script>
       window.addEventListener("resize", function () {
