--- a/static/css/main.css
+++ b/static/css/main.css
@@ -242,12 +242,41 @@ body{
     height: 88%; /* Możesz dostosować tę wartość według potrzeb */
     overflow: hidden; /* Zapobiega wyświetlaniu elementów, które wychodzą poza granice diva */
     border: none; /* Usunięcie ramki wokół diva */
-    position: relative; /* Ustawienie pozycji na "relative" */
+    position: relative; 
 }
 
 .python_img2 img {
-    width: 100%; /* Obrazek wypełni całą szerokość diva */
+    width: 100%;
     height: 100%; 
     object-fit: cover;
 }
 
+
+.element {
+    background: linear-gradient(
+      90deg,
+      rgba(251, 131, 131, 0.1) 0%,
+      rgba(254, 81, 150, 0.1) 100%
+    );
+    background-blend-mode: ;
+    transform: translate(0px, 0px) scale(2.9, 2.6);
+    box-shadow:
+      inset 0px 5px 5px 0px rgba(255, 255, 255, 0.1),
+      inset 0px -5px 5px 0px rgba(254, 81, 150, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    width: 10%;
+    height: 10vh;
+    border-radius:15px;
+
+
+}
+
+.main_contener {
+    margin-bottom: 5vh;
+}
+
+
+.login{
+
+}
