--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,3 +1,7 @@
+:root{
+    --color: linear-gradient(90deg, rgba(110, 0, 213, 0.65) 0%, rgba(77, 77, 204, 0.65) 47%, rgba(0,212,255,0.65) 100%);
+}
+
 body{
     width: 100%;
     height: 100vh;
@@ -28,7 +32,7 @@ body{
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     width: 25%;
-    height: 30vh;
+    height: 35vh;
     border-radius:15px;
     display: flex;
     flex-direction: row;
@@ -37,20 +41,47 @@ body{
   
 
 
+
+
 .login_elements{
-    width: 50%;
+    width: 60%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    letter-spacing: 1px;    
 }
 
-.login_elements div{
+.pics-container{
     width:90%;
     height: 90%;
     background-color: white;
     border-radius: 20px;
+    display: flex;
+    align-items: center;
+
+    flex-direction: column;    
 }
+
+
+.pic{
+    width: 100%;
+    height: 10vh;
+    align-self: center;
+    text-align: center; 
+}
+
+
+.login_elements img {
+    margin-top: 1vh;
+    max-width: 30%;
+    max-height: 30%;
+    object-fit: contain; 
+
+}
+
+
 
 .login_png {
     width: 50%;
@@ -61,8 +92,84 @@ body{
 }
 
 .login_png img {
-    max-width: 90%;
-    max-height: 100%;
+    max-width: 95%;
+    max-height: 95%;
     object-fit: contain; 
     
+}
+
+
+
+.pics-container h4{
+    margin: 0px;
+    padding: 0px;
+    font-family: "Orbitron", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+
+.login{
+    width: 80%;
+    height: 3vh;
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+    gap: 15%;
+}
+
+
+.login label{
+    font-size: 0.75em;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.login{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.login input{
+    width: 90%;
+    height: 2vh;
+    font-size: 0.50em;
+    border-radius: 5px;
+    border: 0px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding:3%;
+
+}
+
+.login input:focus {
+    outline: none;
+    background: var(--color);
+    color: white;
+
+}
+
+
+
+.login button {
+    width: 50%;
+    font-size: 0.70em;
+
+    border-radius: 20px;
+    border: 0px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: ease-in-out 0.2ms;
+    margin-top: 5%;
+  }
+  
+  .login button:hover {
+ 
+    background: var(--color);
+    color: white;
+  }
+
+
+  .login button:active {
+    transform: scale(1.1);
 }
